# MathLibrary

./: CMakeLists.txt
Headers/: Arithmetic.h  Polynomial.h
Polynomials/: Polynomial.cpp  Polynomial.h  Polynomial_Tests.cpp
Source/: Arithmetic.cpp  Polynomial.cpp
Tests/: All_Tests.cpp  Arithmetic_Tests.cpp  Polynomial_Tests.cpp
